# operatorlab

./: LICENSE  README.md  pyproject.toml
operator_core/: __init__.py  algebra.py  base.py  exceptions.py  utilities.py
spectral_operator/: __init__.py  adelic.py  diagnostics.py  geometry.py  visualization.py  zeta.py
spectral_operators/: __init__.py  algebra.py  constants.py  evolution.py  io.py  operators.py  spectrum.py  weights.py
stochastic_operators/: __init__.py  constants.py  diagnostics.py  empirical.py  generators.py  hitting.py  io.py  kernels.py  markov.py  monte_carlo.py  operators.py  stationary.py  test_stochastic_operators.py
tests/: test_adelic.py  test_algebra.py  test_constants.py  test_diagnostics.py  test_evolution.py  test_geometry.py  test_io.py  test_operators.py  test_spectrum.py  test_visualization.py  test_weights.py  test_zeta.py
tests/operator_core/: test_algebra.py  test_core_exceptions.py
tests/spectral_operators/: test_adelic.py  test_constants.py  test_diagnostics.py  test_evolution.py  test_geometry.py  test_io.py  test_operators.py  test_spectrum.py  test_visualization.py  test_weights.py  test_zeta.py
tests/stochastic_operators/: test_monte_carlo.py  test_stochastic_ergodic.py  test_stochastic_generators.py
