[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectral-operator"
version = "0.1.0"
description = "A modular Python framework for spectral operator theory, numerical linear algebra, and scientific computing."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Salma Y. Rodriguez" }
]
keywords = [
    "spectral theory",
    "linear operators",
    "numerical linear algebra",
    "scientific computing",
    "operator theory",
    "riemann hypothesis"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "numpy",
    "scipy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov"
]

[project.urls]
Homepage = "https://github.com/salma-rodriguez/spectral-universe"
Repository = "https://github.com/<your-username>/spectral-universe"
Issues = "https://github.com/<your-username>/spectral-universe/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["spectral_operator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
